2010-06-22	Arnout Vandecappelle <arnout@mind.be>

	PR 1580/misc
	* libchip/i2c/spi-sd-card.c: Use bigger chunks and yield processor
	while waiting for read data.

2010-06-22	Arnout Vandecappelle <arnout@mind.be>

	PR 1579/misc
	* libchip/i2c/spi-sd-card.c: Gradually increasing sleep times when
	waiting for write to finish.

2010-06-22	Arnout Vandecappelle <arnout@mind.be>

	PR 1567/misc
	* libchip/i2c/spi-sd-card.h, libchip/i2c/spi-sd-card.c: Fixed
	timeouts.

2010-06-21	Arnout Vandecappelle <arnout@mind.be>

	PR 1576/misc
	* libchip/i2c/spi-sd-card.c: Enable CRC checks.

2010-06-21	Arnout Vandecappelle <arnout@mind.be>

	PR 1569/misc
	* libchip/i2c/spi-sd-card.c: Added CRC checks.

2010-06-15	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1561/cpukit
	* aclocal/rtems-cpu-subdirs.m4: Merge SPARC64 port.

2010-06-14	Arnout Vandecappelle <arnout@mind.be>

	PR 1557/misc
	* libchip/i2c/spi-sd-card.c: Fixed low capacity special case.

2010-06-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/version.m4: Bump RTEMS_API to 4.11.
	Bump _RTEMS_VERSION to 4.10.99.0.

2010-06-03	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* libchip/network/if_dc.c: Fix warning.

2010-05-31	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/network/greth.c: Misc. hacks to allow compilation on 
	16bit targets.

2010-05-31	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1531/newlib
	* libchip/network/i82586.c:
	Add local copy of ALIGN().

2010-05-31	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/network/cs8900.c:
	Misc. changes to make code 16bit-target compliant.
	* libchip/network/i82586.c:
	Use int32_t instead of int for 16bit-target compliance.
	* libchip/network/open_eth.c: 
	Misc. changes to make code 16bit-target compliant.

2010-05-18	Chris Johns <chrisj@rtems.org>

	* libchip/i2c/spi-sd-card.c, libchip/ide/ata.c: PR
	1448/filesystem.

2010-05-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/bsp-alias.m4: Change quoting to work-round